--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "angular-bootstrap-md": "^9.3.1",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^9.17.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
